force-app/main/default/objects/OCE__GeneralEvent__c/OCE__GeneralEvent__c.object-meta.xml
<CustomObject>
    <description>General Event</description>
    <label>General Event</label>
    <nameField>
        <label>General Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>General Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>