force-app/main/default/objects/OCE__GeneralEvent__c/fields/OCE__AllDay__c.field-meta.xml
<CustomField>
    <fullName>OCE__AllDay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates All Day type of event</description>
    <label>All Day</label>
    <type>Checkbox</type>
</CustomField>