force-app/main/default/objects/OCE__GeneralEvent__c/fields/OCE__Description__c.field-meta.xml
<CustomField>
    <fullName>OCE__Description__c</fullName>
    <description>Description</description>
    <inlineHelpText>Description</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>