force-app/main/default/objects/OCE__GeneralEvent__c/fields/OCE__EndDateTime__c.field-meta.xml
<CustomField>
    <fullName>OCE__EndDateTime__c</fullName>
    <description>End Date Time</description>
    <inlineHelpText>End Date Time</inlineHelpText>
    <label>End Date Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>