force-app/main/default/objects/OCE__GeneralEvent__c/fields/OCE__IsExternal__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsExternal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Turned on value means that event was received from the external calendar</description>
    <label>Is External</label>
    <type>Checkbox</type>
</CustomField>