force-app/main/default/objects/OCE__GeneralEvent__c/fields/OCE__StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>OCE__StartDateTime__c</fullName>
    <description>Start Date Time</description>
    <inlineHelpText>Start Date Time</inlineHelpText>
    <label>Start Date Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>