force-app/main/default/objects/OCE__GeneralEvent__c/fields/OCE__Territory__c.field-meta.xml
<CustomField>
    <fullName>OCE__Territory__c</fullName>
    <description>The territory of the User at the time of the General Event.</description>
    <inlineHelpText>The territory of the User at the time of the General Event.</inlineHelpText>
    <label>Territory</label>
    <length>80</length>
    <type>Text</type>
</CustomField>