force-app/main/default/objects/OCE__GeneralEvent__c/validationRules/OCE__StartDateTimeMoreThanEndDateTime.validationRule-meta.xml
<ValidationRule>
    <fullName>OCE__StartDateTimeMoreThanEndDateTime</fullName>
    <active>true</active>
    <description>End Date Time should be greater than Start Date Time</description>
    <errorConditionFormula>AND (
     !ISBLANK( OCE__StartDateTime__c ),
     !ISBLANK( OCE__EndDateTime__c ), 
     OCE__EndDateTime__c &lt;= OCE__StartDateTime__c 
)</errorConditionFormula>
    <errorMessage>End Date Time should be greater than Start Date Time</errorMessage>
</ValidationRule>